2004/01/24 21:44 (-0500) rwmcfa1

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick
	
	* perl-Gnome2-Print.spec.in: use pkg-config for Requires version

2004/01/14 21:38 (-0500) muppetman

	* Makefile.PL, README: update requirements to 1.020, since we need
	Glib::MakeHelper

2003/12/31 02:27 (-0500) muppetman

	* xs/GnomePrint2.xs: mark ax unused in functions which don't touch
	the input stack, to hush compiler warnings

	* xs/GnomeFont.xs, xs/GnomePrintConfig.xs,
	xs/GnomePrintPaperSelector.xs, xs/GnomePrintUnit.xs:
	don't let RETVAL be used uninitialized in alias switches.

	* xs/GnomePrintJobPreview.xs: don't give a type to 'class' when it's
	not needed

2003/12/29 16:32 (-0500) rwmcfa1

	* perl-Gnome2-Print.spec.in: use the new DATE replacement in 
	conjunction with VERSION to create the changlog on the fly, which is 
	better.

2003/12/23 00:02 (-0500) muppetman

	* xs/GnomeFont.xs, xs/GnomeFontDialog.xs, xs/GnomeFontFace.xs,
	xs/GnomeFontPreview.xs, xs/GnomeFontSelection.xs, xs/GnomeGlyphList.xs,
	xs/GnomePrintConfig.xs, xs/GnomePrintContext.xs, xs/GnomePrintJob.xs,
	xs/GnomePrintPaperSelector.xs, xs/GnomePrintUnit.xs,
	xs/GnomePrintUnitSelector.xs: remove the type specifiers on the class
	parameters, to keep xsubpp from creating a value that will be unused
	and therefore cause unused variable warnings.

2003/12/19 00:20 (+0100) ebassi
	
	* Print.pm: version 0.61
	
	* xs/GnomeGlyphList.xs: implemented:
		gnome_glyphlist_advance
		gnome_glyphlist_kerning
		gnome_glyphlist_letterspace
		gnome_glyphlist_font
		gnome_glyphlist_moveto
		gnome_glyphlist_rmoveto
		gnome_glyphlist_glyph
		gnome_glyphlist_glyphs
		gnome_glyphlist_text_dumb
	
	* xs/GnomePrintUnit.xs: improved documentation.
	
	* xs/GnomePrintConfig.xs: implemented:
		gnome_print_config_set_length

2003/12/17 15:49 (+0100) ebassi
	
	* Print.pm: version 0.60
	
	* examples/buffer-print.pl: added this example program that prints a
	  buffer of lines, wrapping them.
	