@@ -1,3 +1,8 @@
+2004/02/05 15:38 (+0100) ebassi
+
+	* xs/GnomePrintUnit.xs, xs/GnomePrintUnitSelector.xs: hush compiler
+	warnings (patch by Torsten Schoenfeld).
+
 2004/01/24 21:44 (-0500) rwmcfa1
 
 	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
